fix issue in translation interpretation page about us section read more not showing

--- a/public/css/app/layout.css
+++ b/public/css/app/layout.css
@@ -1434,7 +1434,7 @@ a:focus {
 }
 
 .about-readmore {
-  /*display: none;*/
+  display: none;
 }
 
 .about-readmore h2{
